@@ -2,9 +2,10 @@
 -------------------
   * fixed bug in in conda install --force
   * added application API to conda.api module
-  * Add -c/--channel and --override-channels flags (issue 121).
-  * Add default and system meta-channels, for use in .condarc and with -c
+  * add -c/--channel and --override-channels flags (issue 121).
+  * add default and system meta-channels, for use in .condarc and with -c
     (issue 122).
+
 
 2013-06-05   1.6.0:
 -------------------
